Added xUnit Test Runner

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: csharp
 solution: CartTracker.sln
 mono: none
 dotnet: 2.1.502
+install:
+  - nuget restore CartTracker.sln
+  - nuget install xunit-runners -Version 1.9.2 -OutputDirectory test-runner
 script:
-  - dotnet restore
+- msbuild /p:Configuration=Release CartTracker.sln
